--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 #服务名称
 spring.application.name=eureka-server
-#端口号
-server.port=8761
-eureka.instance.hostname=localhost
-#服务注册中心
-eureka.client.service-url.default-zone=http://${eureka.instance.hostname}:${server.port}/eureka/
+#指定环境变量
+spring.profiles.active=node2
 #是否检索服务
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 #是否向服务中心注册自己
-eureka.client.register-with-eureka=false   
+eureka.client.register-with-eureka=true   
+#关闭eureka的自我保护
+eureka.server.enable-self-preservation=false
