--- a/service-user/src/main/resources/application.properties
+++ b/service-user/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.application.name=service-user
 server.port=8182
 #???
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.datasource.url=jdbc:mysql://localhost:3306/week2?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123
+
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.show-sql=true
+#指定MySQl方言
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+#设置存储引擎为InnoDB
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
